Fix the logo font to reduce gaps

--- a/main.css
+++ b/main.css
@@ -64,7 +64,7 @@ kbd {
 .lozenge {
   color: var(--help-bg-color);
   display: inline-block;
-  font-style: bold;
+  font-weight: bold;
 }
 html, body {
   height: 100%;
